Correct DATEDIFF to align with V2's behavior
Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>